# 370zMonitor

./: CLAUDE.md  ESP32 Monitor.txt  README.md  backup_to_drive.bat  backup_to_drive_Arduino-SquareLineProjects.bat  backup_to_drive_ArduinoProject.bat  backup_to_drive_SquareLineProject.bat
Arduino/370zMonitor/: 370zMonitor.ino  Backlog.txt  CMakeLists.txt  README.md  file_browser.h  filelist.txt  platformio.ini  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_ScreenSplash.c  ui_ScreenSplash.h  ui_comp_hook.c  ui_events.h  ui_font_OrbitronExtraBold42.c  ui_font_OrbitronExtraBold48.c  ui_font_OrbitronMedium12.c  ui_font_OrbitronMedium24.c  ui_font_OrbitronRegular12.c  ui_font_OrbitronRegular18.c  ui_font_OrbitronRegular34.c  ui_font_OrbitronRegular48.c  ui_font_OrbitronVariableFontwght26.c  ui_font_OrbitronVariableFontwght48.c  ui_font_OrbitronVariableFontwght8.c  ui_helpers.c  ui_img_1101422646.c  ui_img_111761047.c  ui_img_1419182761.c  ui_img_2072211156.c  ui_img_890178161.c  ui_img_91236053.c  ui_img_pressure128_png.c  wifi.cfg.example
SquareLine/: GaugeAndChartDesign.sll  GaugeAndChartDesign.slp  GaugeAndChartDesign.spj  project.info
SquareLine/!export/: CMakeLists.txt  filelist.txt  ui.h  ui_Screen1.c  ui_Screen1.h  ui_font_OrbitronExtraBold12.c  ui_font_OrbitronMedium18.c  ui_font_OrbitronMedium34.c  ui_font_OrbitronMedium42.c  ui_font_OrbitronRegular26.c  ui_font_OrbitronRegular42.c  ui_font_OrbitronRegular8.c  ui_font_OrbitronSemiBold18.c  ui_font_OrbitronSemiBold34.c  ui_font_OrbitronSemiBold42.c  ui_font_OrbitronSemiBold8.c  ui_font_OrbitronVariableFontwght18.c  ui_font_OrbitronVariableFontwght34.c  ui_font_OrbitronVariableFontwght42.c  ui_helpers.h  ui_img_1610037518.c  ui_img_1867695354.c  ui_img_2038433484.c  ui_img_260142572.c  ui_img_788234086.c  ui_img_837429808.c
(+51 files in other folders)
