SET(SOURCES ui_Screen1.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_788234086.c
    ui_img_111761047.c
    ui_img_91236053.c
    ui_img_1610037518.c
    ui_img_1101422646.c
    ui_img_837429808.c
    ui_img_260142572.c
    ui_img_2038433484.c
    fonts/ui_font_OrbitronExtraBold12.c
    fonts/ui_font_OrbitronExtraBold18.c
    fonts/ui_font_OrbitronExtraBold26.c
    fonts/ui_font_OrbitronExtraBold34.c
    fonts/ui_font_OrbitronExtraBold42.c
    fonts/ui_font_OrbitronExtraBold48.c
    fonts/ui_font_OrbitronMedium12.c
    fonts/ui_font_OrbitronMedium18.c
    fonts/ui_font_OrbitronMedium24.c
    fonts/ui_font_OrbitronMedium26.c
    fonts/ui_font_OrbitronMedium34.c
    fonts/ui_font_OrbitronMedium42.c
    fonts/ui_font_OrbitronMedium48.c
    fonts/ui_font_OrbitronMedium8.c
    fonts/ui_font_OrbitronRegular12.c
    fonts/ui_font_OrbitronRegular18.c
    fonts/ui_font_OrbitronRegular26.c
    fonts/ui_font_OrbitronRegular34.c
    fonts/ui_font_OrbitronRegular42.c
    fonts/ui_font_OrbitronRegular48.c
    fonts/ui_font_OrbitronRegular8.c
    fonts/ui_font_OrbitronSemiBold12.c
    fonts/ui_font_OrbitronSemiBold18.c
    fonts/ui_font_OrbitronSemiBold26.c
    fonts/ui_font_OrbitronSemiBold34.c
    fonts/ui_font_OrbitronSemiBold42.c
    fonts/ui_font_OrbitronSemiBold48.c
    fonts/ui_font_OrbitronSemiBold8.c
    fonts/ui_font_OrbitronVariableFontwght12.c
    fonts/ui_font_OrbitronVariableFontwght18.c
    fonts/ui_font_OrbitronVariableFontwght26.c
    fonts/ui_font_OrbitronVariableFontwght34.c
    fonts/ui_font_OrbitronVariableFontwght42.c
    fonts/ui_font_OrbitronVariableFontwght48.c
    fonts/ui_font_OrbitronVariableFontwght8.c)

add_library(ui ${SOURCES})
